--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
     </div>
   </div>
 </div>
-<script type="module" src="./build/app.js"></script>
+<script type="module" src="./build/src/app.js"></script>
 </body>
 </html>
